added home page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "https://sumangalagouda.github.io/sumangal-text-tools",
+  "homepage": "https://github.com/sumangalagouda/sumangal-text-tools",
   "name": "sumangal-text-tools",
   "version": "0.1.0",
   "private": true,
